--- a/sharding-example/pom.xml
+++ b/sharding-example/pom.xml
@@ -25,6 +25,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>io.shardingsphere</groupId>-->
             <!--<artifactId>sharding-jdbc-spring-boot-starter</artifactId>-->
@@ -78,12 +84,6 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>io.shardingsphere</groupId>
-            <artifactId>sharding-jdbc-core</artifactId>
-            <version>3.1.0</version>
-            <scope>compile</scope>
         </dependency>
 
 
