--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <antlr4.version>4.7.1</antlr4.version>
         <groovy.version>2.4.5</groovy.version>
         <guava.version>18.0</guava.version>
-        <snakeyaml.version>1.16</snakeyaml.version>
+        <snakeyaml.version>1.24</snakeyaml.version>
     </properties>
 
     <dependencies>
@@ -64,6 +64,12 @@
             <artifactId>groovy</artifactId>
             <version>${groovy.version}</version>
             <classifier>indy</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>${antlr4.version}</version>
         </dependency>
 
 
