--- a/sharding-core/pom.xml
+++ b/sharding-core/pom.xml
@@ -12,12 +12,33 @@
     <artifactId>sharding-core</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <antlr4.version>4.7.1</antlr4.version>
+    </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>${antlr4.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
