--- a/sharding-jdbc-core/pom.xml
+++ b/sharding-jdbc-core/pom.xml
@@ -13,7 +13,7 @@
 
 
     <properties>
-        <java.version>1.8</java.version>
+        <antlr4.version>4.7.1</antlr4.version>
     </properties>
 
     <dependencies>
@@ -27,6 +27,25 @@
             <artifactId>sharding-transaction</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>${antlr4.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
